= Cerberus Changelog

== Version 0.2.0

* Configuration structure has been greatly changed since 0.1.1 version
* Added automatic subversion cleanup to avoid repository locking after Cedrberus process termination
* Added Jabber publisher

== Version 0.1.1
Minor improvements

* Added 'buildall' command that build all projects added to Cerberus repository.
* Fixed tests on *nix

== Version 0.1.0
Initial version of Cerberus tool

* Implemented basic functionality required by Continuous Integration.